[package]
name = "pods"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
clap_derive = "4.5.49"
dirs-next = "2.0.0"
serde = "1.0.228"
serde_json = "1.0.145"
sled = "0.34.7"
tokio = { version = "1.48.0", features = ["time", "rt-multi-thread", "macros"] }
tokio-macros = "2.6.0"
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
